# polgraw-allsky

./: .gitignore  404.html  EphemerisDetector.h  License.txt  README.md  dataS2.txt  index.html  input_s6.txt  laltest.c  main.cpp  sitemap.xml
articles/: index.html
coincidences/: Makefile  index.html
coincidences/src/: .gitignore  Makefile  Makefile2  README.md  cinit.c  coi_digger.py  coincidences-grid.c  coincidences.c  coincidences2.c  config.ini  config_O3a_cell32-8-4-4_tests.ini  fap-many.c  fap.c  fap.sh  fap2.c  fap_from_new_coi_header.py  fap_new_coi_header.c  fap_new_coi_header_hyper_improved.c  fap_pygsl.py  faptest.c  get_fap_data_from_summary_file.py  read_coi.c  read_coi_and_triggers.c  read_coi_new_coi_header.c
css/: base.css  fixes.css
doc/: GenParSoft.m  readme_search.txt
fap_coincidences/: index.html
fisher/: index.html
followup/: index.html
followup/src/: .gitignore  Makefile  coincidences.c  followup.c  glue.c  glue.h  glue2.c  gridopt.c  init.c  init.h  jobcore.c  lineph.c  main.c  settings.c  settings.h  struct.h
gen2day/: AUTHORS  DeleteOutliers.c  DeleteOutliers.h  ExtractBand.c  GrubbsOutliers.c  Makefile  Makefile_bigdog  README.md  genseg.c  get_barycenter.c  laltest.c  sid.c
grid_generation/: index.html
gridgen/: .gitignore  License.txt  Makefile  README.md  dataS2.txt  gg.cbp  gg.depend  gg.ini  gg.layout  main.cpp
gridgen/gridgen_v0.2.34/: License.txt  Makefile  README.md  gg.ini  gg.layout  gg.rc  main.cpp
gridgen/include/: CellS2.h  DataS2.h  DensityS1.h  DensityS1DS.h  DensityS2.h  FisherRM.h  FisherRMDS.h  GridS1.h  GridS1DS.h  GridS2.h  GridS2DS.h  Manual.h  Node.h  OptionValue.h  ReadConfig.h  ReadData.h  ReadEphemeris.h  num.h
gridgen/old-version/: README.md
gridgen/src/: DataS2.cpp  DensityS1.cpp  DensityS1DS.cpp  DensityS2.cpp  FisherRM.cpp  FisherRMDS.cpp  GridS1.cpp  GridS1DS.cpp  GridS2.cpp  GridS2DS.cpp  Manual.cpp  Node.cpp  OptionValue.cpp  ReadConfig.cpp  ReadData.cpp  ReadEphemeris.cpp  num.cpp
include/: FisherRM.h  ReadConfig.h
input_data/: index.html
matlabO1/: CoinSignificanceO1.m  CoinSignificanceO1All.m  Contents.m  FalseAlarm.m  FalseAlarmCfast.m  NoCells.m  freadGrid.m  vol.m
matlabO1/files/: coinc-summary-global-sort_5_10.txt  outliersO1.txt  significanceO1.txt  summary_0000_0242.txt  summary_0243_0328.txt  summary_0329_0447.txt  summary_0448_0520.txt  summary_0521_0599.txt  summary_0600_0699.txt  summary_0700_0759.txt  summary_0760_0784.txt  veto_fraction_frame11.txt
mkdocs/: search_index.json
one-detector/doc/: Doxyfile  JobVirSigparLin.m  readme_search.txt  readme_sigen.txt
one-detector/src/: .gitignore  Makefile  auxi.c  auxi.h  init.c  init.h  main.c  struct.h
periodic-interferences/: Makefile.pspm2fx2  README.md  README.pspm2fx2  pspm2fx2.c
pipeline_script/: index.html
polgraw-allsky/: index.html
polgraw-allsky/articles/: index.html
polgraw-allsky/coincidences/: index.html
polgraw-allsky/input_data/: index.html
polgraw-allsky/pipeline_script/: index.html
polgraw-allsky/search_for_candidates/: index.html
search/network/: CMakeLists.txt  Makefile
search/network/doc/: readme_search-gpu.txt  readme_search.txt
search/network/src-cpu/: .gitignore  Makefile  auxi.c  auxi.h  b2t.c  bench.c  fisher.c  fisher_exact.c  gauss-xdat.c  glue.c  glue.h  init.c  init.h  invert.py  jobcore.c  jobcore.h  mF_mb.nb  main.c  neigh.c  neigh.h  read_coi.c  settings.c  settings.h  sig1  sigen.c  struct.h  timer.c  timer.h
search/network/src-gpu/: CMakeLists.txt  Makefile  auxi.c  auxi.h  floats.h  floats.hcl  init.c  init.cu  init.h  jobcore.c  jobcore.cu  jobcore.h  kernels.cl  kernels.cu  kernels.h  kernels.hcl  main.c  runme  runme6d  settings.c  settings.h  spline_z.c  spline_z.cu  spline_z.h  struct.h  timer.c  timer.h
search/network/src-gpu/CL/: util.c  util.h
search/network/src-gpu/CUDA/: cuda_error.h
search/network/src-gpu/test/: testrun.sh
search/network/src-openmp/: .gitignore  Makefile  Makefile-pgi  README.md  auxi.c  auxi.h  init.c  init.h  jobcore.c  jobcore.h  main.c  settings.c  settings.h  sigen.c  struct.h  timer.c
search/network/src-openmp/lib/sleef-3.1/include/: sleef.h
search/network/src-openmp/lib/sleef-3.1/lib/: libsleef.so.3  libsleef.so.3.1  libsleefdft.so.3  libsleefdft.so.3.1  libsleefgnuabi.so.3  libsleefgnuabi.so.3.1
search/one-detector/: Makefile  README.md
search/spotlight/: Makefile  README.md
search_for_candidates/: index.html
sensitivity-scripts/: README  README.md  band_h0.list  bandlist  config.ini  dummy.sh  job-slurm.sub  job.sub  mcsim.sh  mcsummary.sh  prepare.sh  script-slurm.py  script.py  script2-slurm.py  script2.py  script_manyframes.sh  summary.py
sensitivity-scripts/upper-limits/: 0165_results  0666_results  README  README.md  rewrite_and_sort.py  ul.py
sensitivity-scripts/v2/: README.md  bandlist  config.ini  job.sub  script.py  summary.py
sensitivity_upper_limits/: index.html
sources/: mkdocs.yml
sources/docs/: articles.md  coincidences.md  fap_coincidences.md  fisher.md  followup.md  grid_generation.md  index.md  input_data.md  pipeline_script.md  search_for_candidates.md  sensitivity_upper_limits.md
spotlight/: README.md
spotlight/src/: .gitignore  Makefile_bigdog  b2t.c  init.h  main.c  settings.h  struct.h
src/: .gitignore  CMakeLists.txt  JobNAllSky-common.c  JobNAllSky-common.cu  JobNAllSky.c  JobNAllSky.cu  Makefile  Makefile_bigdog  Node.cpp  ReadEphemeris.cpp  auxi.c  auxi.cu  auxi.h  b2t.c  bench.c  clean.sh  coincidences.c  followup.c  fstat.c  fstat.cu  get_summary.sh  gridopt.c  gridr.c  gridr.cu  init.c  init.h  job.sub  jobcore.c  jobcore.cu  jobcore.h  kernels.cu  kernels.h  lineph.c  lvcvirgo.c  lvcvirgo.h  main.c  num.cpp  prepare.sh  script.sh  search  (+13 more)
src/coinc-testdata/: triggers2_current  triggers2_matlab
src/lib/: README.md
src/matlab/: BenchCpuTime.m  HardwareInjectionParameters.m  freadGrid.m  pulsarpar.m  volg.m
testdata/: README.md  range-J0322+0441.txt
testdata/test-data-network-injection/: O1LinesToBeCleaned_H1_v1.txt  O1LinesToBeCleaned_L1_v1.txt
(+76 files in other folders)
